Dependency providers. User API. Cleaner user service
